# CppTemplate

./: .gitignore  CMakeLists.txt  CppTemplate.code-workspace  Makefile  README.md  cmake_build.sh
include/: icecream.h
libs/: arom.h  base.h
src/: CMakeLists.txt  main.cpp
src/libs/: CMakeLists.txt
src/libs/division/: CMakeLists.txt
src/libs/libarom/: CMakeLists.txt
src/libs/libbase/: CMakeLists.txt
tests/: CMakeLists.txt
tests/src/: divider_tests.cpp
